--- a/WEB_PRACTICA_FINAL/css/styles_aboutus.css
+++ b/WEB_PRACTICA_FINAL/css/styles_aboutus.css
@@ -191,11 +191,20 @@ nav {
   width: 40%;
 }
 
-#churrourbanVideo {
-  width: 100%;
-  height: 100%; /* Cambia esta línea para que el video ocupe toda la altura */
-  object-fit: cover;
-}
+  .churrourban img:hover{
+  
+      filter: drop-shadow(0 0 5px #f61067) drop-shadow(0 0 10px #f61067)
+        drop-shadow(0 0 15px #f61067) drop-shadow(0 0 20px #f61067)
+        drop-shadow(
+          0 0 10px rgba(255, 255, 255, 0.8)
+            /* Trazado difuminado blanco más pronunciado */
+        );
+
+  }
+
+
+
+
 
 .imagen_fondo {
   background-image: url(../media/img/fachada.jpg);
@@ -248,7 +257,13 @@ h1:hover {
   border-style: solid;
   border-color: #f61067;
   border-width: 2px;
-  box-shadow: 0 0 10px rgba(52, 152, 219, 0.7); /* Efecto de brillo al hacer hover */
+  filter: drop-shadow(0 0 5px #f61067) drop-shadow(0 0 10px #f61067)
+  drop-shadow(0 0 15px #f61067) drop-shadow(0 0 20px #f61067)
+  drop-shadow(
+    0 0 10px rgba(255, 255, 255, 0.8)
+      /* Trazado difuminado blanco más pronunciado */
+  );
+  
 }
 
 .botonparallax img {
@@ -760,6 +775,8 @@ a {
     width: 100%;
     margin-bottom: 2em;
   }
+
+
 
   .videoaboutus {
     width: 50%;
