--- a/WEB_PRACTICA_FINAL/css/styles_merch.css
+++ b/WEB_PRACTICA_FINAL/css/styles_merch.css
@@ -22,7 +22,7 @@ li {
 }
 
 header {
-  height: auto;
+  height: 8em;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -44,6 +44,9 @@ nav {
 
   display: block;
   z-index: 999;
+  position: fixed;
+    width: 90%;
+    align-self: center;
 }
 
 #menu {
@@ -59,12 +62,11 @@ nav {
   align-content: flex-start;
   margin-top: 0.4em;
 }
-
-#logo > img {
+#logo > a > img {
   height: 5em;
   position: absolute;
-  top: 1.5em;
-  left: 70px;
+  top: -10px;
+  left: 20px;
 }
 
 #menu > ul {
@@ -122,7 +124,6 @@ nav {
   margin: 1em 0;
   width: 50%;
   float: right;
-
   display: flex;
   flex-direction: column;
 }
@@ -132,7 +133,6 @@ nav {
   border: 2px solid #1c1a31;
   border-radius: 50px;
   list-style: none;
-
   height: 3em;
   margin: 0.5em 0;
   display: flex;
@@ -153,13 +153,7 @@ nav {
 
 /* MEDIA QUERIES NAV z>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media screen and (max-width: 700px) {
-    .toggle_menu {
-        display: flex;
-        flex-direction: row-reverse;
-    }
-    .toggle_menu > ul{
-        z-index: 100;
-    }
+
     #menu > ul > li:last-child {
         display: block;
     }
@@ -403,6 +397,7 @@ nav {
 /* GALERIA >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 h3 {
   font-size: 8vw;
+  cursor: default;
   font-weight: 800;
 }
 .sec-merch{
@@ -412,15 +407,14 @@ h3 {
   display: flex;
   flex-direction: row;
   gap: 4vw;
-  margin-left: 3em;
-  margin-top: 3em;
+  margin-left: 4vw;
+  margin-top: 6vw;
   margin-bottom: 2vw;
 }
 .sec-merch > div:first-child > img {
   width: 10vw;
   height: 10vw;
   position: relative;
-  top: -0.4em;
 }
 .color-circulo {
   border: black;
