--- a/WEB_PRACTICA_FINAL/css/styles_merch.css
+++ b/WEB_PRACTICA_FINAL/css/styles_merch.css
@@ -238,10 +238,21 @@ nav {
   left: -2vw;
   z-index: 3;
 }
+.star-1:hover{
+  filter: drop-shadow(  0 0 0.3rem var(--color-verde-links));
+  transition: 0.3s;
+
+}
 .star-2 {
   height: 37vw;
   top: -28vw;
   left: -6vw;
+  filter: drop-shadow(  0 0 0 none);
+
+}
+.star-2:hover{
+  filter: drop-shadow(  0 0 0.6rem var(--color-morado-boton));
+  transition: 1s ease-in-out;
 }
 .stars-1 {
   height: 30vw;
@@ -255,12 +266,22 @@ nav {
   right: -23vw;
   z-index: 5;
 }
+.stars-2:hover{
+  filter: drop-shadow(  0 0 0.3rem var(--color-verde-links));
+  transition: 0.3s;
+
+}
 .stars-3 {
   height: 18vw;
   top: 26vw;
   right: -18vw;
   transform: rotate(22deg);
   z-index: 6;
+}
+.stars-3:hover{
+  filter: drop-shadow(  0 0 0.3rem var(--color-rosa-hover));
+  transition: 0.3s;
+
 }
 .eme{
   display: flex;
