--- a/WEB_PRACTICA_FINAL/css/styles_merch.css
+++ b/WEB_PRACTICA_FINAL/css/styles_merch.css
@@ -646,6 +646,16 @@ h3 {
   color: var(--color-blanco-fondo);
 }
 
+.pink {
+  background-color: var(--color-rosa-hover);
+  color: var(--color-blanco-fondo);
+}
+/* .btn-talla-xs{
+  background-color: var(--color-blanco-fondo);
+}
+.btn-talla-xs:hover{
+  background-color: var(--color-rosa-hover);
+} */
 /* BOTONES CANTIDAD >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 .btn-cantidad {
   border: var(--color-rosa-hover) solid 2px;
@@ -669,6 +679,8 @@ h3 {
 .btn-comprar {
   display: flex;
   padding: 2em 0em;
+  width: 100%;
+  height: 12vw;
 }
 .btn-primary {
   --bs-btn-hover-bg: none;
@@ -683,12 +695,33 @@ h3 {
 }
 
 .flecha-merch-btn {
-  width: 8%;
+  width: 1.5vw;
 }
 .card-body {
   display: none;
 }
+.btn-comprar-1{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 20vw;
+  height: 5vw;
+  font-size: 2vw;
+}
 
+.btn-comprar-1:hover{
+  background-color: var(--color-blanco-fondo);
+  color: var(--color-rosa-hover);
+  border-style: solid;
+  border-color: var(--color-rosa-hover);
+  border-width: 2px;
+  filter: drop-shadow(0 0 5px var(--color-rosa-hover)) drop-shadow(0 0 10px var(--color-rosa-hover))
+  drop-shadow(0 0 15px var(--color-rosa-hover)) drop-shadow(0 0 20px var(--color-rosa-hover))
+  drop-shadow(
+    0 0 10px rgba(255, 255, 255, 0.8)
+      /* Trazado difuminado blanco más pronunciado */
+  );
+}
 @media only screen and (max-width: 750px) {
   .modal-content{
     width: 90%;
