--- a/WEB_PRACTICA_FINAL/css/styles_merch.css
+++ b/WEB_PRACTICA_FINAL/css/styles_merch.css
@@ -737,15 +737,58 @@ h3 {
   .modal-body{
     flex-direction: column;
     align-items: center;
+    gap: 7vw;
   }
   .modal-body > #img-parent{
     position: relative;
     left: -7vw;
   }
+  .texto-modal > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .h1-seleccion {
+    font-size: 8vw;
+  }
+  .seleccion {
+    padding: 3vw 0em;
+    align-items: center;
+  }
+  .h2-seleccion {
+    font-size: 5vw;
+  }
+  .seleccion > .lista-btn {
+    gap: 3vw;
+  }
+  .seleccion > .lista-btn > .btn-color {
+    height: 5.5vw;
+    width: 5.5vw;
+    border-radius: 5.5vw;
+  }
+  .lista-btn > .btn-color {
+    height: 5vw;
+    width: 5vw;
+    border-radius: 5vw;
+  }
 }
 
 
-
+@media only screen and (max-width: 575px) {
+  .lista-btn {
+    gap: 6vw;
+  }
+  .lista-btn > .btn-color {
+    height: 7vw;
+    width: 7vw;
+    border-radius: 7vw;
+  }
+  .seleccion > .lista-btn > .btn-color {
+    height: 8vw;
+    width: 8vw;
+    border-radius: 5.5vw;
+  }
+}
 
 
 
